<resources>
    <string name="app_name">FOOD RUNNER</string>
    <string name="app_logo">app logo</string>
    <string name="food_runner">FOOD RUNNER</string>
    <string name="sharedPref">sharedPreference</string>
    <string name="mobile_number_10_digit">Mobile Number (10 digits)</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_up_now"><u>Don\'t have an account? Sign up now</u></string>
    <string name="sign_up">Sign_up</string>
    <string name="name">Name (Min. 3 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password (Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="input_msg">Enter your registered mobile number and email below</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favorites_restaurants">Favorites Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log out</string>
    <string name="drawer_header">Drawer Header</string>

    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dish_image">Dish Image</string>
    <string name="_1">1</string>
    <string name="add">ADD</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below :</string>
    <string name="add_to_favorite">Add</string>
    <string name="rm_frm_fav">Remove</string>
    <string name="string_sort_low_to_high">Cost ( Low to High )</string>
    <string name="string_sort_high_to_low">Cost ( High to Low )</string>
    <string name="string_sort_rating">Rating</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="remove">Remove</string>
    <string name="Enter_new_password">Enter new password</string>
    <string name="please_enter_your_new_password">Please Enter your new password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="profile_picture">Profile picture</string>
    <string name="food_item">food_item</string>
    <string name="_11_11_2011">11/11/2011</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="ordering_from">Ordering from : %1$s</string>
    <string name="place_order_total">PLACE ORDER(TOTAL %1$s )</string>
    <string name="item_amout">Rs %1$s</string>
    <string name="item_amout_menu">Rs %1$s/Person</string>
    <string name="total">Total Rs %1$s</string>
    <string name="my_cart">MY CART</string>
    <string name="thank_you_for_choosing_food_runner">Thank you for choosing FOOD RUNNER</string>
    <string name="Total">Total</string>
    <string name="username">Username</string>
    <string name="phoneNumber">PhoneNumber</string>
    <string name="order_placed">Order Placed successfully</string>
    <string name="restaurant">Restaurants</string>
</resources>