<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryLightColor"
    tools:context=".activity.ForgotPassword">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="35dp"
        android:src="@drawable/img_logo"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="18sp"
        android:text="@string/input_msg"/>

    <EditText
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_phone_number"
        android:id="@+id/et_phone_number"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:hint="@string/mobile_number_10_digit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:maxLength="10"
        android:drawablePadding="5dp"
        android:importantForAutofill="no" />
    <EditText
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_email"
        android:id="@+id/et_email"
        android:layout_margin="10dp"
        android:drawablePadding="5dp"
        android:padding="10dp"
        android:hint="@string/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:background="@drawable/rounded_edittext"
        android:id="@+id/btn_next"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        />

</LinearLayout>