<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_drawer"
    android:background="@color/primaryLightColor"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="250dp">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/profile_pic"
        android:contentDescription="@string/drawer_header" />
    <TextView
        android:id="@+id/username_drawer"
        android:text="@string/username"
        android:textSize="18sp"
        android:padding="5dp"
        android:textColor="@color/white"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/phoneNumber_drawer"
        android:text="@string/phoneNumber"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>