<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLightColor"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".activity.LoginPage">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/img_logo"
        android:visibility="visible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_phone_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_edittext"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="5dp"
        android:textColorHint="@color/primaryDarkColor"
        app:boxStrokeColor="@color/primaryLightColor"
        app:boxStrokeWidth="1dp"
        app:startIconDrawable="@drawable/ic_phone_number"
        app:startIconTint="@color/primaryColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:drawableStart="@drawable/ic_phone_number"
            android:hint="@string/mobile_number_10_digit"
            android:inputType="number"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tl_phone_number"
        android:layout_gravity="center"
        android:background="@drawable/rounded_edittext"
        android:padding="5dp"
        android:textColorHint="@color/primaryDarkColor"
        app:boxStrokeColor="@color/primaryLightColor"
        app:boxStrokeWidth="1dp"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/primaryColor">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tl_password"
        android:layout_marginTop="10dp"
        android:background="@color/primaryColor"
        android:backgroundTint="@color/primaryColor"
        android:layout_marginBottom="10dp"
        android:text="@string/login"
        app:cornerRadius="5dp"/>

    <TextView
        android:id="@+id/txt_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_Sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:padding="5dp"
        android:text="@string/sign_up_now"
        android:textColor="@color/white"
        android:textSize="18sp" />
</RelativeLayout>