<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/cv_single_menu_item"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="5sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/txt_menu_item_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_1"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:textColor="@color/secondaryTextColor"
                android:id="@+id/txt_menu_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/app_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_menu_item_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/app_name"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:textColor="@color/white"
            android:id="@+id/btn_menu_item"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="0dp"
            android:text="@string/remove"
            android:textSize="12sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>