<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="2dp"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:id="@+id/HomeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <androidx.cardview.widget.CardView
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            app:cardCornerRadius="5dp">

            <ImageView
                android:id="@+id/img_info"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dish_image"
                android:scaleType="centerCrop"
                android:src="@drawable/img_logo" />
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:padding="5dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/secondaryTextColor"
                android:textStyle="bold"
                android:id="@+id/txt_dish_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/app_name"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/img_rm_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fav_not_sel"
                android:layout_alignParentEnd="true"/>

            <ImageView
                android:id="@+id/img_addtofav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fav_sel"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:textColor="@color/secondaryTextColor"
                android:id="@+id/txt_dish_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_dish_name"
                android:layout_margin="5dp"
                android:text="@string/item_amout_menu"
                android:textSize="15sp" />

            <RatingBar
                android:id="@+id/rb_dish_rating"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_dish_cost"
                android:numStars="5" />
        </RelativeLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>